test/nashorn/script/basic/es6/restparam.js.EXPECTED
java.lang.RuntimeException: test/nashorn/script/basic/es6/restparam.js#35:6<eval>:1:17 ES6 function rest parameter declaration is not yet implemented
function func(...args) {}
                 ^
java.lang.RuntimeException: test/nashorn/script/basic/es6/restparam.js#35:6<eval>:1:23 ES6 function rest parameter declaration is not yet implemented
function func(x, y, ...args) {}
                       ^
java.lang.RuntimeException: test/nashorn/script/basic/es6/restparam.js#35:6<eval>:1:11 ES6 function rest parameter declaration is not yet implemented
({ meth(...args) {} })
           ^
java.lang.RuntimeException: test/nashorn/script/basic/es6/restparam.js#35:6<eval>:1:17 ES6 function rest parameter declaration is not yet implemented
({ meth(x, y, ...args) {} })
                 ^
SyntaxError: test/nashorn/script/basic/es6/restparam.js#35:6<eval>:1:15 Duplicate parameter name "x"
({ meth(x = 0, x) {} })
               ^
